<resources>
    <string name="app_name">AquamanAdmin</string>
    <string name="logo1">Main Logo</string>
    <string name="Aquaman">Aquaman</string>
    <string name="adminApp">Admin app</string>
    <string name="adminApplication">Admin Application</string>
    <string name="aquamanTitle">_ Aquaman _</string>
    <string name="logo">logo</string>
    <string name="fullName">Full Name</string>
    <string name="homeAddress">Home Address</string>
    <string name="signUp">Sign Up</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHaveAnAccount">Already have an account ?</string>
    <string name="logIn">Log In</string>
    <string name="showPassword">Show Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="notRegisteredYet">Not Registered Yet ?</string>
    <string name="Dashboard">Admin\'s Dashboard</string>
    <string name="helloThere">Hello there,</string>
    <string name="profileIcon">Profile Icon</string>
    <string name="Profile">Profile</string>
    <string name="adminProfile">Admin Profile</string>
    <string name="History">History</string>
    <string name="order_details">Order Details</string>
    <string name="select_date">select_date</string>
    <string name="show_all_orders">Show All Orders</string>
    <string name="home_address">Home Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="summary">Summary</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="all_users_list">All Users List</string>
    <string name="update_profile">Update Profile</string>
    <string name="new_name">New Name</string>
    <string name="new_address">New Address</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="new_email_address">New Email Address</string>
    <string name="current_email_address">Current Email Address</string>
    <string name="current_password">Current Password</string>
    <string name="update_new_info">Update New Info</string>
    <string name="update_admin_profile">Update Admin Profile</string>
    <string name="check_history">Check History</string>
    <string name="customer_s_name">Customer\'s Name</string>
    <string name="view_history">View History</string>
    <string name="profiletext">profileText</string>
    <string name="profile">Profile</string>
    <string name="ordericon">orderIcon</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="historyicon">historyIcon</string>
    <string name="history">History</string>
    <string name="all_users">All Users</string>
    <string name="aboutus">AboutUs</string>
    <string name="about_us">About Us</string>
    <string name="logouticon">logoutIcon</string>
    <string name="logout">LogOut</string>
</resources>